# iotpnprp3

./: README.md  setup.sh
nonpnp_app/: CMakeLists.txt  config.h  main.c
pnp_app/: CMakeLists.txt  buildapp.sh  grove_bme280.c  grove_bme280.h
